fix week4 layout issue and total load size

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -144,18 +144,17 @@ footer p {
   text-align: center;
 }
 
-.advanture figure {
+.advanture h2 {
+  margin-bottom: 1rem;
+}
+
+.advanture-photos {
   display: grid;
-  gap: 0.5rem;
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: 1fr auto;
-  margin-top: 1rem;
+  gap: 0.5rem;
 }
 
-.advanture img {
+.advanture-photos img {
   height: 100px;
-}
-
-.advanture figcaption {
-  order: 1;
 }
